src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__lexing_type_hints-3.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Lexer::new(\"@type boolean\").collect::<Vec<_>>()"
---
[
    Token {
        kind: Keyword,
        start: 0,
        text: "@type",
    },
    Token {
        kind: BooleanType,
        start: 6,
        text: "boolean",
    },
]
