src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__lexing_type_hints-7.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Lexer::new(\"# @type 'qa' | 'dev' | 'prod'\").collect::<Vec<_>>()"
---
[
    Token {
        kind: Pound,
        text: "#",
    },
    Token {
        kind: Keyword,
        text: "@type",
    },
    Token {
        kind: StringLiteral,
        text: "'qa'",
    },
    Token {
        kind: Pipe,
        text: "|",
    },
    Token {
        kind: StringLiteral,
        text: "'dev'",
    },
    Token {
        kind: Pipe,
        text: "|",
    },
    Token {
        kind: StringLiteral,
        text: "'prod'",
    },
]
