src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__lexing_type_hints.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Lexer::new(\"@type string\").collect::<Vec<_>>()"
---
[
    Token {
        kind: Keyword,
        text: "@type",
    },
    Token {
        kind: StringType,
        text: "string",
    },
]
