src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__parse_type_hints-3.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Parser::new(\"@type number\").parse()"
---
Ok(
    Number,
)
