src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__parse_type_hints-4.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Parser::new(\"@type 'qa' | 'dev' | 'prod'\").parse()"
---
Some(
    Union(
        [
            "'qa'",
            "'dev'",
            "'prod'",
        ],
    ),
)
