src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__parse_type_hints-5.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Parser::new(\"@type 'qa' || 'dev' ||| | 'prod' | || 'test'\").parse()"
---
Some(
    Union(
        [
            "'qa'",
            "'dev'",
            "'prod'",
            "'test'",
        ],
    ),
)
