src/dotenv/snapshots/ntro__dotenv__typehint_parser__tests__parse_type_hints.snap
---
source: src/dotenv/typehint_parser.rs
expression: "Parser::new(\"@type string\").parse()"
---
Some(
    String,
)
